--- a/templates/results.html
+++ b/templates/results.html
@@ -11,7 +11,7 @@
 
     <center><h1>What We Found</h1></center>
 
-    <center><div><p class="results">{{data}}</p></div></center>
+    <center><div><p class="results" style="white-space: pre-line;text-align:left;">{{data}}</p></div></center>
 
 
     <center>
