--- a/templates/about.html
+++ b/templates/about.html
@@ -8,12 +8,29 @@
     {% extends "template.html" %}
     {% block content %}
 
-    <center><h1> About This Program </h1></center>
+    <center><h1> About This Program (And Us!)</h1></center>
+
+      <p> This program enables a user to input a file into our webapp. We execute the file in an AWS virtual machine instance and generate a log file of the running processes in the executable.
+        The log file is generated on the screen to help experienced developers make an informed decision.</p>
+
+
     <center>
-      <p> Flask is a micro web framework written in Python.</p>
-    <p> Applications that use the Flask framework include Pinterest,
-      LinkedIn, and the community web page for Flask itself.</p>
-      </center>
+    <h2>Gautam Banuru</h2>
+    <p>UC Irvine senior - loves computer vision</p><br>
+
+    <h2>Neal Khodaskar</h2>
+    <p>UC Irvine senior - machine learning fanatic</p><br>
+
+    <h2>Sahil Katrekar</h2>
+    <p>UC Irvine senior - loves web-dev</p><br>
+
+    <h2>Rishi Shah</h2>
+    <p>UC Irvine senior - cloud and virtual machine expert</p><br>
+    </center>
+
+
+
+
 
     {% endblock %}
   </body>
